minor spacing fixes

--- a/views/style.styl
+++ b/views/style.styl
@@ -123,7 +123,7 @@ body
 #sidebar
 	float right
 	.container
-		margin-bottom 1em
+		margin-bottom 10px
 
 #shell .slideshow
 	width 630px
